--- a/app/src/main/res/layout/activity_etiqueta_lida.xml
+++ b/app/src/main/res/layout/activity_etiqueta_lida.xml
@@ -21,7 +21,7 @@
     <Button
         android:id="@+id/button8"
         android:layout_width="421dp"
-        android:layout_height="100"
+        android:layout_height="100dp"
         android:background="#1D71B8"
         android:text="Voltar ao menu"
         android:textColor="#FFFFFF"
@@ -32,8 +32,9 @@
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/check"
-        tools:layout_editor_absoluteX="136dp"
         tools:layout_editor_absoluteY="313dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
