--- a/app/src/main/res/layout/activity_ler_etiqueta.xml
+++ b/app/src/main/res/layout/activity_ler_etiqueta.xml
@@ -10,7 +10,7 @@
     <Button
         android:id="@+id/button7"
         android:layout_width="421dp"
-        android:layout_height="100"
+        android:layout_height="100dp"
         android:background="#1D71B8"
         android:text="Voltar ao menu"
         android:textColor="#FFFFFF"
