--- a/app/src/main/res/layout/activity_etiqueta_lida.xml
+++ b/app/src/main/res/layout/activity_etiqueta_lida.xml
@@ -29,11 +29,11 @@
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/header"
         app:srcCompat="@drawable/check" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/header"
         android:layout_width="416dp"
         android:layout_height="90dp"
         android:layout_marginBottom="190dp"
