--- a/app/src/main/res/layout/activity_etiqueta_lida.xml
+++ b/app/src/main/res/layout/activity_etiqueta_lida.xml
@@ -33,7 +33,7 @@
         app:srcCompat="@drawable/check" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/constraintLayout2"
         android:layout_width="416dp"
         android:layout_height="90dp"
         android:layout_marginBottom="190dp"
