--- a/app/src/main/res/layout/activity_ler_etiqueta.xml
+++ b/app/src/main/res/layout/activity_ler_etiqueta.xml
@@ -8,7 +8,7 @@
     tools:context=".LerEtiqueta">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/constraintLayout2"
         android:layout_width="416dp"
         android:layout_height="90dp"
         android:layout_marginBottom="188dp"
