--- a/app/src/main/res/layout/activity_register_type.xml
+++ b/app/src/main/res/layout/activity_register_type.xml
@@ -7,7 +7,7 @@
     tools:context=".RegisterType">
 
     <ImageButton
-        android:id="@+id/imageButton10"
+        android:id="@+id/instagram"
         android:layout_width="0dp"
         android:layout_height="67dp"
         android:layout_marginStart="61dp"
@@ -21,7 +21,7 @@
         android:cropToPadding="false"
         android:padding="10dp"
         android:scaleType="matrix"
-        app:layout_constraintBottom_toTopOf="@+id/textView25"
+        app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView27"
@@ -39,12 +39,12 @@
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView25"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton10"
+        app:layout_constraintBottom_toTopOf="@+id/login"
+        app:layout_constraintEnd_toEndOf="@+id/instagram"
         app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
     <ImageButton
-        android:id="@+id/imageButton9"
+        android:id="@+id/facebook"
         android:layout_width="0dp"
         android:layout_height="67dp"
         android:layout_marginStart="61dp"
@@ -58,10 +58,10 @@
         android:cropToPadding="false"
         android:padding="10dp"
         android:scaleType="matrix"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton10"
+        app:layout_constraintBottom_toBottomOf="@+id/instagram"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton8"
+        app:layout_constraintTop_toTopOf="@+id/email"
         app:srcCompat="@drawable/icon_metro_medkit" />
 
     <TextView
@@ -77,11 +77,11 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView28"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
+        app:layout_constraintEnd_toEndOf="@+id/facebook"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <ImageButton
-        android:id="@+id/imageButton8"
+        android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="67dp"
         android:layout_marginStart="61dp"
@@ -102,7 +102,7 @@
         app:srcCompat="@drawable/icon_metro_medkit" />
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="109dp"
@@ -129,7 +129,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView27"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
+        app:layout_constraintEnd_toEndOf="@+id/email"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <ImageView
