--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,6 +1,7 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/messages_header">
+    <!-- <PreferenceCategory app:title="@string/messages_header">
 
         <EditTextPreference
             app:key="signature"
@@ -15,21 +16,22 @@
             app:title="@string/reply_title"
             app:useSimpleSummaryProvider="true" />
 
-    </PreferenceCategory>
+    </PreferenceCategory>-->
 
-    <PreferenceCategory app:title="@string/sync_header">
-
+    <PreferenceCategory app:title="@string/personal_header">
         <SwitchPreferenceCompat
             app:key="sync"
             app:title="@string/sync_title" />
-
         <SwitchPreferenceCompat
             app:dependency="sync"
             app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
             app:title="@string/attachment_title" />
-
     </PreferenceCategory>
-
+    <PreferenceCategory app:title="@string/accessibility_header">
+        <SwitchPreferenceCompat
+            app:key="attachment"
+            app:summaryOff="@string/colorblind_summary_off"
+            app:summaryOn="@string/colorblind_summary_on"
+            app:title="@string/colorblind_title" />
+    </PreferenceCategory>
 </PreferenceScreen>
